--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "tech-blog",
   "version": "1.0.0",
   "description": "",
-  "main": "",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node FILENAME"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
